fix(Wizard): align text by center

--- a/src/components/App/Shared/Wizard/Wizard.module.css
+++ b/src/components/App/Shared/Wizard/Wizard.module.css
@@ -10,4 +10,5 @@
 .title {
   color: var(--brand-color-primary);
   margin-bottom: 24px;
+  text-align: center;
 }
